--- a/app/views/layouts/rails_db_inspector/application.html.erb
+++ b/app/views/layouts/rails_db_inspector/application.html.erb
@@ -28,10 +28,14 @@
     <header class="bg-white shadow-sm border-b border-gray-200">
       <div class="mx-auto px-4 sm:px-6 lg:px-8">
         <div class="flex h-16 justify-between items-center">
-          <div class="flex items-center">
+          <div class="flex items-center space-x-4">
             <h1 class="text-xl font-semibold text-gray-900">
               <%= link_to "Rails DB Inspector", queries_path, class: "hover:text-blue-600 transition-colors" %>
             </h1>
+            <nav class="flex items-center space-x-3 ml-6">
+              <%= link_to "Queries", queries_path, class: "text-sm font-medium #{'text-blue-600' if controller_name == 'queries'} #{'text-gray-500 hover:text-gray-700' unless controller_name == 'queries'} transition-colors" %>
+              <%= link_to "Schema", schema_index_path, class: "text-sm font-medium #{'text-blue-600' if controller_name == 'schema'} #{'text-gray-500 hover:text-gray-700' unless controller_name == 'schema'} transition-colors" %>
+            </nav>
           </div>
           <div class="flex items-center space-x-4">
             <span class="text-sm text-gray-500">Query Analysis & Performance Monitoring</span>
